@@ -1,6 +1,7 @@
 mkdocs-material-3.x.x (2019-xx-xx)
 
   * Removed Google Tag Manager and reverted to Google Analytics
+  * Removed blocks in partials - Jinja doesn't support them
 
 mkdocs-material-3.3.0 (2019-01-29)
 
